# 2026-04-layerzero

./: README.md  REPORT_GUIDE.md  SAMPLE_REPORT.txt  audit_report.md  checklist.txt  code4arena_bug_guide.md  eslint.config.js  model.md  out_of_scope.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  scope.txt  turbo.jsonc
contracts/protocol/stellar/: .gitignore  Cargo.toml  LICENSE  clippy.toml  package.json  rust-toolchain.toml  rustfmt.toml  ts-bindings-gen.toml  turbo.json
contracts/protocol/stellar/contracts/common-macros/: Cargo.toml
contracts/protocol/stellar/contracts/common-macros/src/: auth.rs  contract_ttl.rs  error.rs  lib.rs  lz_contract.rs  rbac.rs  storage.rs  ttl_configurable.rs  ttl_extendable.rs  upgradeable.rs  utils.rs
contracts/protocol/stellar/contracts/common-macros/src/tests/: auth.rs  contract_ttl.rs  error.rs  lz_contract.rs  mod.rs  rbac.rs  test_helpers.rs  ttl_configurable.rs  ttl_extendable.rs  upgradeable.rs  utils.rs
contracts/protocol/stellar/contracts/endpoint-v2/: Cargo.toml
contracts/protocol/stellar/contracts/endpoint-v2/src/: errors.rs  events.rs  lib.rs  message_lib_manager.rs  messaging_channel.rs  messaging_composer.rs  storage.rs  util.rs
contracts/protocol/stellar/contracts/endpoint-v2/src/interfaces/: layerzero_composer.rs  layerzero_endpoint_v2.rs  layerzero_receiver.rs  message_lib.rs  message_lib_manager.rs  messaging_channel.rs  messaging_composer.rs  mod.rs  send_lib.rs
contracts/protocol/stellar/contracts/endpoint-v2/src/tests/: endpoint_setup.rs  mock.rs  mod.rs
contracts/protocol/stellar/contracts/layerzero-views/: Cargo.toml
contracts/protocol/stellar/contracts/layerzero-views/src/: errors.rs  layerzero_view.rs  lib.rs  storage.rs  types.rs
contracts/protocol/stellar/contracts/layerzero-views/src/tests/: layerzero_view_tests.rs  mod.rs  setup.rs  types_tests.rs
contracts/protocol/stellar/contracts/macro-integration-tests/: Cargo.toml
contracts/protocol/stellar/contracts/macro-integration-tests/tests/: runtime.rs  ui_contract_impl.rs  ui_contract_trait.rs  ui_error.rs  ui_lz_contract.rs  ui_multisig.rs  ui_oapp.rs  ui_ownable.rs  ui_rbac.rs  ui_storage.rs  ui_ttl_configurable.rs  ui_ttl_extendable.rs  ui_upgradeable.rs
contracts/protocol/stellar/contracts/message-libs/: Cargo.toml  lib.rs
contracts/protocol/stellar/contracts/message-libs/blocked-message-lib/: Cargo.toml
contracts/protocol/stellar/contracts/message-libs/blocked-message-lib/src/: lib.rs
contracts/protocol/stellar/contracts/message-libs/message-lib-common/: Cargo.toml
contracts/protocol/stellar/contracts/message-libs/message-lib-common/src/: errors.rs  lib.rs  packet_codec_v1.rs  testing_utils.rs  worker_options.rs
contracts/protocol/stellar/contracts/message-libs/simple-message-lib/: Cargo.toml
contracts/protocol/stellar/contracts/message-libs/simple-message-lib/src/: errors.rs  lib.rs  simple_message_lib.rs  storage.rs
contracts/protocol/stellar/contracts/message-libs/treasury/: Cargo.toml
contracts/protocol/stellar/contracts/message-libs/treasury/src/: errors.rs  events.rs  lib.rs  storage.rs  treasury.rs
contracts/protocol/stellar/contracts/message-libs/uln-302/: Cargo.toml
contracts/protocol/stellar/contracts/message-libs/uln-302/src/: errors.rs  events.rs  lib.rs  storage.rs  types.rs  uln302.rs
contracts/protocol/stellar/contracts/oapps/: Cargo.toml
contracts/protocol/stellar/contracts/oapps/console-oft/: Cargo.toml
contracts/protocol/stellar/contracts/oapps/console-oft/integration-tests/: setup.rs  utils.rs
contracts/protocol/stellar/contracts/oapps/console-oft/src/: errors.rs  lib.rs  oft.rs  oft_access_control.rs
contracts/protocol/stellar/contracts/oapps/counter/: Cargo.toml
contracts/protocol/stellar/contracts/oapps/counter/integration_tests/: mod.rs  setup_sml.rs  setup_uln.rs  signing.rs  test_with_blocked.rs  test_with_sml.rs  test_with_uln.rs  utils.rs
contracts/protocol/stellar/contracts/oapps/counter/src/: codec.rs  counter.rs  errors.rs  lib.rs  options.rs  storage.rs  u256_ext.rs
contracts/protocol/stellar/contracts/oapps/oapp/: Cargo.toml
contracts/protocol/stellar/contracts/oapps/oapp-macros/: Cargo.toml
contracts/protocol/stellar/contracts/oapps/oapp-macros/src/: lib.rs  (+1 more)
contracts/protocol/stellar/contracts/oapps/oft/: Cargo.toml
contracts/protocol/stellar/contracts/oapps/oft-core/: Cargo.toml
contracts/protocol/stellar/contracts/oapps/sac-manager/: Cargo.toml
contracts/protocol/stellar/contracts/upgrader/: Cargo.toml
contracts/protocol/stellar/contracts/upgrader/src/: lib.rs
contracts/protocol/stellar/contracts/utils/: Cargo.toml
contracts/protocol/stellar/contracts/utils/src/: auth.rs  bytes_ext.rs  errors.rs  lib.rs  option_ext.rs  ownable.rs  rbac.rs  testing_utils.rs  ttl_extendable.rs  upgradeable.rs
contracts/protocol/stellar/contracts/workers/: Cargo.toml  lib.rs
contracts/protocol/stellar/contracts/workers/dvn/: Cargo.toml
contracts/protocol/stellar/contracts/workers/dvn-fee-lib/: Cargo.toml
contracts/protocol/stellar/contracts/workers/executor/: Cargo.toml
contracts/protocol/stellar/contracts/workers/executor-fee-lib/: Cargo.toml
contracts/protocol/stellar/contracts/workers/executor-helper/: Cargo.toml
contracts/protocol/stellar/contracts/workers/fee-lib-interfaces/: Cargo.toml
contracts/protocol/stellar/contracts/workers/price-feed/: Cargo.toml
contracts/protocol/stellar/contracts/workers/worker/: Cargo.toml
contracts/protocol/stellar/docs/: error-spec.md  layerzero-v2-on-stellar.md  oapp-guide.md  oft-guide.md
contracts/protocol/stellar/sdk/: package.json  tsconfig.json  turbo.json  vitest.config.ts
contracts/protocol/stellar/sdk/src/: index.ts
contracts/protocol/stellar/sdk/test/: counter-sml.test.ts  counter-uln.test.ts  oft-sml.test.ts  sac-manager.test.ts  secp256k1.ts  upgrader.test.ts  utils.ts
contracts/protocol/stellar/sdk/test/suites/: constants.ts  deploy.ts  dummyContractClient.ts  globalSetup.ts  localnet.ts  scan.ts
contracts/protocol/stellar/sdk/test/test_data/: test_upgradeable_dvn.wasm
(+551 files in other folders)
