[package]
name = "common-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
heck = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
prettyplease = { workspace = true }