[package]
name = "oft"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
library = []
testutils = []

[dependencies]
soroban-sdk = { workspace = true }
cfg-if = { workspace = true }
utils = { workspace = true }
common-macros = { workspace = true }
endpoint-v2 = { workspace = true, features = ["library"] }
oapp = { workspace = true }
oapp-macros = { workspace = true }
oft-core = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
simple-message-lib = { workspace = true, features = ["testutils"] }
message-lib-common = { workspace = true, features = ["testutils"] }
endpoint-v2 = { workspace = true, features = ["testutils"] }
utils = { workspace = true, features = ["testutils"] }
