[package]
name = "sac-manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
library = []
testutils = []

[dependencies]
soroban-sdk = { workspace = true }
utils = { workspace = true }
common-macros = { workspace = true }
cfg-if = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
utils = { workspace = true, features = ["testutils"] }
oft = { workspace = true, features = ["testutils"] }
