[package]
name = "dvn"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
library = []
testutils = []

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
cfg-if = { workspace = true }
soroban-sdk = { workspace = true, features = ["hazmat-crypto"] }
worker = { workspace = true }
fee-lib-interfaces = { workspace = true }
message-lib-common = { workspace = true }
utils = { workspace = true }
common-macros = { workspace = true }
endpoint-v2 = { workspace = true, features = ["library"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
k256 = { workspace = true }
sha3 = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
